--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Perspective - Exploring Ideas, Finding Inspiration</title>
-    <meta name="description" content="A space for exploring ideas, finding inspiration, and discovering new ways of seeing the world through lifestyle, wellness, travel, and personal growth." />
-    <meta name="author" content="Perspective Blog" />
+    <title>Lingyi Zhou — Portfolio</title>
+    <meta name="description" content="Lingyi Zhou is a multidisciplinary designer crafting editorial digital experiences, brand identities, and visual narratives." />
+    <meta name="author" content="Lingyi Zhou" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@400;600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="7410f81b-8218-4f2d-bb32-1ba1f84eabb2" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Lingyi Zhou — Portfolio" />
+    <meta property="og:description" content="Designing digital narratives that feel human, textured, and quietly bold." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:site" content="@lingyizhou" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
